--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +14,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.7",
+    "@types/node": "^14.6.0",
     "nodemon": "^1.19.4"
   }
 }
